--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
     <properties>
         <logback.version>1.1.8</logback.version>
         <powsybl-core.version>3.6.0</powsybl-core.version>
+        <powsybl-open-loadflow.version>0.6.0</powsybl-open-loadflow.version>
+        <powsybl-balances-adjustment.version>1.2.2</powsybl-balances-adjustment.version>
+        <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
+        <powsybl-single-line-diagram.version>1.7.0-SNAPSHOT</powsybl-single-line-diagram.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <springboot.version>2.2.9.RELEASE</springboot.version>
         <springfox.version>2.9.2</springfox.version>
@@ -471,6 +475,66 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-open-loadflow</artifactId>
+                <version>${powsybl-open-loadflow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-balances-adjustment</artifactId>
+                <version>${powsybl-balances-adjustment.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-network-store-iidm-impl</artifactId>
+                <version>${powsybl-network-store.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-network-store-client</artifactId>
+                <version>${powsybl-network-store.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-network-store-model</artifactId>
+                <version>${powsybl-network-store.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-cgmes-dl-conversion</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-cgmes-iidm-extensions</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-cgmes-layout</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-color</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-core</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-force-layout</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-single-line-diagram-iidm-extensions</artifactId>
+                <version>${powsybl-single-line-diagram.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
