--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <springboot.version>2.2.9.RELEASE</springboot.version>
         <springfox.version>2.9.2</springfox.version>
+        <websocket-tyrus.version>1.17</websocket-tyrus.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -475,6 +476,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.tyrus.bundles</groupId>
+                <artifactId>tyrus-standalone-client</artifactId>
+                <version>${websocket-tyrus.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.powsybl</groupId>
