--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     </scm>
 
     <properties>
+        <embedded-cassandra.version>3.0.3</embedded-cassandra.version>
         <logback.version>1.1.8</logback.version>
         <powsybl-core.version>3.6.0</powsybl-core.version>
         <powsybl-open-loadflow.version>0.6.0</powsybl-open-loadflow.version>
@@ -89,7 +90,7 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- powsybl-core artifacts, to be removed when they are listed in powsybl-core's bom -->
+            <!-- powsybl-core multimodule (no bom) -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-dsl</artifactId>
@@ -492,6 +493,8 @@
                 <artifactId>powsybl-balances-adjustment</artifactId>
                 <version>${powsybl-balances-adjustment.version}</version>
             </dependency>
+
+            <!-- powsybl-network-store multimodule (no bom) -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-network-store-iidm-impl</artifactId>
@@ -507,6 +510,8 @@
                 <artifactId>powsybl-network-store-model</artifactId>
                 <version>${powsybl-network-store.version}</version>
             </dependency>
+
+            <!-- powsybl-single-line-diagram multimodule (no bom) -->
             <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-single-line-diagram-cgmes-dl-conversion</artifactId>
@@ -541,6 +546,43 @@
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-single-line-diagram-iidm-extensions</artifactId>
                 <version>${powsybl-single-line-diagram.version}</version>
+            </dependency>
+
+            <!-- embedded cassandra multimodule (no bom) -->
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-spring-test</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-junit4-test</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-api</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-annotations</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-commons</artifactId>
+                <version>${embedded-cassandra.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nosan</groupId>
+                <artifactId>embedded-cassandra-mock</artifactId>
+                <version>${embedded-cassandra.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
