--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <embedded-cassandra.version>3.0.3</embedded-cassandra.version>
         <junit.version>4.13</junit.version>
         <logback.version>1.1.8</logback.version>
+        <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
         <powsybl-core.version>3.6.0</powsybl-core.version>
         <powsybl-open-loadflow.version>0.6.0</powsybl-open-loadflow.version>
         <powsybl-balances-adjustment.version>1.2.2</powsybl-balances-adjustment.version>
@@ -491,6 +492,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.powsybl</groupId>
+                <artifactId>powsybl-case-datasource-client</artifactId>
+                <version>${powsybl-case-datasource-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.tyrus.bundles</groupId>
