--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <embedded-cassandra.version>3.0.3</embedded-cassandra.version>
         <junit.version>4.13</junit.version>
         <logback.version>1.1.8</logback.version>
+        <lombok.version>1.18.12</lombok.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
         <powsybl-core.version>3.6.0</powsybl-core.version>
         <powsybl-open-loadflow.version>0.6.0</powsybl-open-loadflow.version>
@@ -104,7 +105,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
             <!-- powsybl-core multimodule (no bom) -->
             <dependency>
                 <groupId>com.powsybl</groupId>
