--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,14 @@
         <lombok.version>1.18.12</lombok.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
         <powsybl-core.version>3.6.0</powsybl-core.version>
+        <powsybl-rte-core.version>2.13.0</powsybl-rte-core.version>
         <powsybl-open-loadflow.version>0.6.0</powsybl-open-loadflow.version>
         <powsybl-balances-adjustment.version>1.2.2</powsybl-balances-adjustment.version>
         <powsybl-network-store.version>1.0.0-SNAPSHOT</powsybl-network-store.version>
-        <powsybl-single-line-diagram.version>1.7.0-SNAPSHOT</powsybl-single-line-diagram.version>
+        <powsybl-single-line-diagram.version>1.7.0</powsybl-single-line-diagram.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <springboot.version>2.2.9.RELEASE</springboot.version>
+        <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
         <springfox.version>2.9.2</springfox.version>
         <websocket-tyrus.version>1.17</websocket-tyrus.version>
         <metricscore.version>3.2.6</metricscore.version>
@@ -509,6 +511,11 @@
                 <version>${websocket-tyrus.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-webflux-ui</artifactId>
+                <version>${springdoc-openapi.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-open-loadflow</artifactId>
                 <version>${powsybl-open-loadflow.version}</version>
@@ -517,6 +524,13 @@
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-balances-adjustment</artifactId>
                 <version>${powsybl-balances-adjustment.version}</version>
+            </dependency>
+
+            <!-- powsybl rte core multimodule (no bom) -->
+            <dependency>
+                <groupId>com.rte-france.powsybl</groupId>
+                <artifactId>powsybl-hades2-integration</artifactId>
+                <version>${powsybl-rte-core.version}</version>
             </dependency>
 
             <!-- powsybl-network-store multimodule (no bom) -->
