--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,7 @@
 
     <properties>
         <embedded-cassandra.version>3.0.3</embedded-cassandra.version>
-        <groovy.version>2.5.14</groovy.version>
         <junit.version>4.13</junit.version>
-        <logback.version>1.1.8</logback.version>
         <lombok.version>1.18.12</lombok.version>
         <mock.web.server.version>4.6.0</mock.web.server.version>
         <powsybl-case-datasource-client.version>1.0.0-SNAPSHOT</powsybl-case-datasource-client.version>
@@ -67,20 +65,15 @@
     <dependencyManagement>
         <dependencies>
             <!-- overrides of imports -->
-            <!-- powsybl-core 3.6 specifies logback-classic but not logback-core,
-                 leading to mismatched versions. Remove when fixed in powsybl-core -->
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-core</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
+
             <!-- downgrade of metrics-core needed for compatibility with cassandra-driver < 4 . To remove when we upgrade to >4 -->
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
                 <version>${metricscore.version}</version>
             </dependency>
-            <!-- to remove when powsybl upgrades to 4.13 -->
+
+            <!-- 4.13.1 is incompatible with spring-boot-starter-test.To remove once fixed https://github.com/spring-projects/spring-boot/issues/23876 -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -522,11 +515,6 @@
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-case-datasource-client</artifactId>
                 <version>${powsybl-case-datasource-client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy</artifactId>
-                <version>${groovy.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.tyrus.bundles</groupId>
