Upgrade to powsybl-dependencies 2024.1.0
Signed-off-by: Etienne Homer <etiennehomer@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </scm>
 
     <properties>
-        <powsybl-ws-dependencies.version>2.9.0</powsybl-ws-dependencies.version>
+        <powsybl-ws-dependencies.version>2.10.0-SNAPSHOT</powsybl-ws-dependencies.version>
         <gridsuite-filter.version>1.0.4</gridsuite-filter.version>
     </properties>
 
